fix copy and spacing between links in social page

--- a/frontend/src/pages/SocialPage/index.module.css
+++ b/frontend/src/pages/SocialPage/index.module.css
@@ -23,7 +23,7 @@
 
 .linkWrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   padding: 0;
   margin: 0;
 }
@@ -31,6 +31,7 @@
 .link {
   width: 32px;
   height: 32px;
+  margin: 0 10px;
   list-style-type: none;
 }
 
